--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="h-full">
-  <div class="container"></div>
+  <div class="container">
+    
+
+
+
+  </div>
+
   
   <script src="app.js"></script>
 </body>
