udpated main page and changed nav style

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="h-full">
+  <nav>
+    <a href="recipes/lasagna.html">Lasagna</a>
+    <a href="recipes/applepie.html">Apple Pie</a>
+    <a href="recipes/meatballs.html">Meatballs</a>
+
+  </nav>
   <div class="container">
     
+
 
 
 
