--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
   </nav>
   <div class="container">
-    
+    <div class="container-header" style="text-align: center;">
+      <h1>Welcome to recipes page</h1>
+
+    </div>
 
 
 
